--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,10 @@
 # compiler and compile options
-CC=g++ --std=c++0x
+CC=g++ --std=c++20
 LIBS= \
 	-ldl \
 	-legel \
+	-lfmt \
+	-lstdc++fs \
 	$(shell pkg-config --libs --cflags icu-uc icu-io)
 CFLAGS=-c -Wall -pedantic $(LIBS)
 LDFLAGS=$(LIBS)
@@ -17,16 +19,16 @@ OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE=egel-bot
 
 # targets
-all: CC=g++ --std=c++0x
+all: CC=g++ --std=c++20
 all: $(SOURCES) $(EXECUTABLE)
 
-O3: CC=g++ --std=c++0x -O3
+O3: CC=g++ --std=c++20 -O3
 O3: $(SOURCES) $(EXECUTABLE)
 
-gprof: CC=g++ --std=c++0x -O3 -pg
+gprof: CC=g++ --std=c++20 -O3 -pg
 gprof: $(SOURCES) $(EXECUTABLE)
 
-debug: CC=g++ --std=c++0x -g
+debug: CC=g++ --std=c++20 -g
 debug: $(SOURCES) $(EXECUTABLE)
 
 $(EXECUTABLE): $(OBJECTS) 
